--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
     
     <div class="grid">
-    <div class="unit cloud cloud-bunch">
+    <div class="unit cloud">
         <i class="unit unit-xs-1 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-cloud cloud-1"></i>
         <i class="unit unit-xs-1 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-cloud cloud-2"></i>
         <i class="unit unit-xs-1 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-cloud cloud-3"></i>
