feat:(css) trial one spacing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC|Gochi+Hand' rel='stylesheet' type='text/css'>    
 	
     <link href="css/_style.css" rel="stylesheet">
-     <link href="css/grid.css" rel="stylesheet">
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,7 +15,7 @@
 <body class="back-colour">
 
 
-    <div class="grid">
+    <div class="grid center">
     <div class="unit  star-bunch">
         <p class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-stars star-1"></p>
         <p class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-stars star-2"></p>
