feat:(css) changed folder
redid preprose in hopes that it’ll work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://file.myfontastic.com/XEj5tssTnG6FMgB7YGmK73/icons.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC|Gochi+Hand' rel='stylesheet' type='text/css'>    
 	
-    <link href="css/_style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
