--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body class="back-colour">
 
 
-    <div class="grid center">
-    <div class="unit  star-bunch">
-        <p class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-stars star-1"></p>
-        <p class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-stars star-2"></p>
-        <p class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3 icon-stars star-3"></p>
-    </div>
+    <div class="star-bunch">
+    
+        <p class=" icon-stars star-1"></p>
+        <p class="  icon-stars star-2"></p>
+        <p class="  icon-stars star-3"></p>
+
 </div>
     
     <div class="grid">
